syntax = "proto3";

option go_package = "grpc/sup-broker";

package supbroker;

// Servicio del Broker para comunicación con Supervisores
service BrokerService {
    // Solicita la dirección de un Servidor Hextech
    rpc GetServer(ServerRequest) returns (ServerResponse);

    // Resuelve inconsistencias notificadas por el Supervisor
    rpc ResolveInconsistency(InconsistencyRequest) returns (ServerResponse);
}

// Solicitud básica para obtener un servidor
message ServerRequest {
    string region = 1; // Región opcional para balanceo basado en región
}

// Respuesta con la dirección del Servidor Hextech
message ServerResponse {
    string server_address = 1; // Dirección del Servidor Hextech asignado
}

// Solicitud de inconsistencia enviada por el Supervisor
message InconsistencyRequest {
    string region = 1;            // Región del producto
    string product_name = 2;      // Nombre del producto
    VectorClock supervisor_clock = 3; // Reloj vectorial del Supervisor
}

// Reloj vectorial para sincronización entre servidores
message VectorClock {
    int32 server1 = 1;  // Reloj de servidor 1
    int32 server2 = 2;  // Reloj de servidor 2
    int32 server3 = 3;  // Reloj de servidor 3
}
