syntax = "proto3";

option go_package = "grpc/sup-serv";

package supserv;

// Servicio implementado por los Servidores Hextech
service HextechService {
    rpc HandleRequest(SupervisorRequest) returns (ServerResponse);
}

// Solicitudes enviadas por Supervisores
message SupervisorRequest {
    string region = 1;                     // Región afectada
    string product_name = 2;               // Producto afectado
    OperationType operation_type = 3;      // Tipo de operación: AGREGAR, RENOMBRAR, ACTUALIZAR, BORRAR
    optional int32 value = 4;              // Valor opcional (para agregar/actualizar)
    optional string new_product_name = 5;  // Nuevo nombre opcional (para renombrar)
    VectorClock known_vector_clock = 6;    // Reloj vectorial conocido por el Supervisor
}

// Respuestas enviadas por los Servidores Hextech
message ServerResponse {
    ResponseStatus status = 1;             // Estado de la operación (OK o ERROR)
    VectorClock vector_clock = 2;          // Reloj vectorial actualizado
    optional int32 value = 3;              // Valor del producto procesado (si aplica)
    optional string message = 4;           // Mensaje opcional en caso de error
}

// Representación de un reloj vectorial
message VectorClock {
    int32 server1 = 1;
    int32 server2 = 2;
    int32 server3 = 3;
}

// Tipos de operación permitidos
enum OperationType {
    AGREGAR = 0;
    RENOMBRAR = 1;
    ACTUALIZAR = 2;
    BORRAR = 3;
}

// Estado de la respuesta
enum ResponseStatus {
    OK = 0;
    ERROR = 1;
}
